# new_make_pleco_dicts

./: .gitattributes  .gitignore  Makefile  README.md  TODO.MD  add_vietnamese_to_radicals.py  build_all.bat  build_all_yomitan_dict.cmd  build_test.bat  check_wordlists_and_make_reccommendations.ipynb  clean_dups_in_hanzilearn.py  compare_data.py  count_sh.sh  extract_hanzii_dict.py  extract_playground.ipynb  get_character_mnemonics.ipynb  hello.py  lacviet_extract.py  lacviet_fix_data.py  lacviet_make_dict.py  lookup.py  make_cc-cedict_thin_dict.py  make_cc_cedict_thin_dict.py  make_cccedict.py  make_char_component_dict.py  make_radical_name_dict.py  make_thesaurus.py  make_thesaurus_dict.py  make_thesaurus_dict_data.py  make_trung_viet_dict.py  playground.ipynb  pleco_to_html_tsv.py  pleco_to_other_dicts.py  pyproject.toml  redownload-new.txt  redownload-remains-new.txt  redownload-remains.txt  requirements.txt  ruff.toml  run_all_make_thesaurus_dict.bat  (+11 more)
data/: char_dict.csv  char_dict_mod.csv  char_dict_mod_3000.csv  dict_antonym.txt  dict_negative.txt  dict_synonym.txt  hanlearn-characters.csv  lacviet_parsed_issues.json  mnemonics.json  new_decompositions.json  similar-chars.csv  words_to_add.txt
dict/: README.md
test/: data.json  dictionary_output.txt  dictionary_template.txt
wordlists/: IDS_dictionary.txt  IDS_dictionary_additions.txt  IDS_dictionary_radical_perfect.txt  README.MD  Top_100_radicals.txt  chinese_charfreq_simpl_trad.txt  dic_words_set.txt  hsk30-pleco.txt  hsk_1-4.txt  kangxi_radical_supplement_unicode.txt  kangxi_radical_unicode.txt  (+14 more)
(+12 files in other folders)
