[project]
name = "new-make-pleco-dicts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.12.1",
    "beautifulsoup4>=4.12.2",
    "chin-dict>=0.1.4",
    "dragonmapper>=0.2.6",
    "hanziconv>=0.3.2",
    "hanzidentifier>=1.2.0",
    "hanzipy>=1.0.4",
    "levenshtein>=0.23.0",
    "pinyin-jyutping-sentence==1.3",
    "pinyin>=0.4.0",
    "readchar>=4.0.5",
    "regex>=2023.10.3",
    "unicodeblock>=0.3.1",
    "playwright==1.49.1",
    "pytest-playwright==0.6.2",
]

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint]
task-tags = ["HACK"]